Bug 60056 - CRASH when fill all cells of sheet
Summary: CRASH when fill all cells of sheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: confirmed:4.2.0.2:OSX target:5.3.0 ta...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-30 06:36 UTC by Rainer Bielefeld Retired
Modified: 2021-05-21 10:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-01-30 06:36:08 UTC
This is a spin off from "Bug 60021 - CRASH when paste and all cells of sheet are selected", please mark as DUP if a fix seems possible together with fix for that one.

Steps hwo to reproduce with "LibO  4.0.0.2 rc   -  GERMAN UI / German Locale  [Build ID: 5991f37846fc3763493029c4958b57282c2597e)]"  {tinderbox: @6, pull time 2013-01-24  07:20(?)} on German WIN7 Home Premium (64bit) with User Profile automatically created form renamed /3 User profile used by 3.6.5.2

1. Open new spreadsheet document from LibO Start Center
2. type "1" into A1
3. Click column heading "A"
4. Edit -> Fill -> Down
   > All Cells in column A filled with "1"
5. Click common Rows/Columns heading   (or do <control+a> for select all
   > All cells in sheet selected
6. Menu 'Edit -> Fill -> right'
   > Starts to fill cells, WIN Task manager shows rapidly increasing memory 
     consumption for soffice.bin
   > unresponsive, finally crashed
    

As stated in Bug 60021 By Eike we need to forbid "Fill all cells of sheet"

I see a different problem what also would be fixed with forbidding "fill all":

Proceed as instruction above, but without step 2. LibO will stop responding with maximum processor load, but without significant memory consumption. After 15 Minutes or so work was done and LibO became responding again.

Situation was a little different in LibO 3.3.3 (WIN), In step 6 also becomes unresponsive, but no significant processor load or memory consumption, hwat ever that might mean.
Comment 1 Jorendc 2013-02-06 21:25:19 UTC
I can reproduce this behavior using Linux Mint 14 x64 with LibreOffice 4.0.0.3 rc3. Following [1] I mark this bug as 'Critical Medium'.

[1] https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg
Comment 2 retired 2014-01-17 13:03:25 UTC
Confirmed:4.2.0.2:OSX
Comment 3 Joel Madero 2015-05-02 15:43:06 UTC Comment hidden (obsolete)
Comment 4 raal 2015-12-17 21:44:51 UTC
Still present in Version: 5.2.0.0.alpha0+ (x64)
Build ID: cfe08df695c046371c4361a434176e6381e3e064
CPU Threads: 1; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-12-15_13:10:55
Comment 5 Eike Rathke (retired, only occasionally showing up) 2016-07-28 22:20:34 UTC
Taking.
Comment 6 Commit Notification 2016-07-29 13:12:01 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c729ee7622b1d54b2dc82b1807c68899efeab6d7

Resolves: tdf#60056 disallow Fill when entire sheet is selected

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-07-29 13:21:21 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77327759c9053da493430ee01b4d7fe98c174574

disallow Random Number when entire sheet is selected, tdf#60056 related

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Eike Rathke (retired, only occasionally showing up) 2016-07-29 14:39:04 UTC
Pending review https://gerrit.libreoffice.org/27690 for 5-2
Comment 9 Commit Notification 2016-07-29 16:26:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5cf5975cef114870268bee792e44570ddfdaafe8

limit SelectionFillDOOM to 24117248 cells, tdf#60021 tdf#60056 related

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-07-30 20:34:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d460db76504378ed7e0ec10cf3cdd9b5f2b354df&h=libreoffice-5-2

Resolves: tdf#60056 disallow Fill and Random when entire sheet is selected

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-08-02 15:16:23 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7dda28234cc516e864aff9a6c97b7c539a063c4e&h=libreoffice-5-2

limit SelectionFillDOOM to 24117248 cells, tdf#60021 tdf#60056 related

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.