Resolves: tdf#60056 disallow Fill and Random when entire sheet is selected

This is a combination of 3 commits.

move range detection to ScViewData::SelectionFillDOOM()

(cherry picked from commit 4b90c9dc83d96908d3732d95e75c2f71d0f5d988)

Resolves: tdf#60056 disallow Fill when entire sheet is selected

(cherry picked from commit c729ee7622b1d54b2dc82b1807c68899efeab6d7)

disallow Random Number when entire sheet is selected, tdf#60056 related

(cherry picked from commit 77327759c9053da493430ee01b4d7fe98c174574)

866f84d72c27be962dbad8f8e4dcb345aa336bff
e9e229c3d3e5a5a7e3f3e90ebd181471927bd452

Change-Id: Ic5205428136fc323affed8d956d6ee0434d43988
Reviewed-on: https://gerrit.libreoffice.org/27690
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>